# Physics-Simulations

./: README.md  abc.txt  index.js  sort.js
Collisions/: index.py
Fluid Simulation/: index.html  index.py
cuda-fluid/: a.exp  main.cu
fluid/: Cargo.toml
fluid/src/: main.rs
fluid/src/renderer_backend/: bind_group_layout_generator.rs  compute_pipeline_builder.rs  pipeline_builder.rs
fluid/src/shaders/: shader.wgsl
rust-collisions/: Cargo.toml
rust-collisions/src/: ball.rs  main.rs  vector.rs
rust-collisions/src/renderer_backend/: bind_group_layout_generator.rs  pipeline_builder.rs
rust-collisions/src/shaders/: shader.wgsl
rust-fluid/: index.js
rust-fluid/src/: main.rs
rust-fluid/src/renderer_backend/: bind_group_layout_generator.rs  compute_pipeline_builder.rs  mod.rs
rust-fluid/src/shaders/: shader.wgsl
