[package]
name = "Rust-Collisions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29.10"
env_logger = "0.11.1"
log = "0.4.20"
wgpu = "0.19.1"
pollster = "0.3.0"
bytemuck = { version = "1.16.0", features = ["derive"] }
cgmath = "0.18.0"
futures-intrusive = "0.5.0"